engine/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_halfwidth_kana_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────╮
│  >_ Hexa Engine (v0.0.0)              │
│                                        │
│ Visit                                  │
│ https://chatgpt.com/codex/settings/usa │
│ for up-to-date                         │
│ information on rate limits and credits │
│                                        │
│  Model:                ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞ  │
│  Directory: [[workspace]]              │
│  Permissions:          Custom (workspa │
│  Agents.md:            <none>          │
│  Account:              ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ@ex │
│  Thread name:          ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞ  │
│  Collaboration mode:   ｶﾞﾊﾟ collaborat │
│                                        │
│  Limits:               data not availa │
╰────────────────────────────────────────╯
